[package]
name = "waterlib"
version = "0.1.0+beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.137", features=["derive"]}
serde_yaml = "0.8.24"
rmp-serde = "~1.1.0"
anyhow = "~1.0.57"
rand = "0.8.5"
tracing = "~0.1.35"

[dev-dependencies]
pretty_env_logger = "0"